# simroelfix

./: .gitignore  README.md  directory_tree.txt  parameters.json  poetry.md
SimBack/: pyproject.toml
simroel-py-v3/: main.py  parameters.json  plotgraph.py  requires.txt  sim_plots.ipynb  test_fes.ipynb  test_fiber.ipynb  test_fiber_alloc.ipynb
simroel-py-v3/Result/: new_FF_est2.csv
simroel-py-v3/auxiliar/: functions.py
simroel-py-v3/core/: parameters.json  simroel.py
simroel-py-v3/data/: parameters.json
simroel-py-v3/env/: pyvenv.cfg
simroel-py-v3/env/Scripts/: activate  activate.bat
simroel-py-v3/files/: file_manager.py  parameters.py
